[package]
name = "wallet-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bip39 = { version = "2.2.1", features = ["rand"] }
secp256k1 = { version = "0.31.1", features = ["rand","std"] }
sha3 = "0.10"
aes-gcm = "0.10"
rand = "0.9.2"
base64 = "0.22.1"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls","chrono"] }
anyhow = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }