[package]
name = "wallet-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.8.7", features = ["ws"] }  # 添加 WebSocket 支持
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密货币相关
bip39 = { version = "2.2.1", features = ["rand"] }
secp256k1 = { version = "0.31.1", features = ["rand","std"] }
sha3 = "0.10"
sha2 = "0.10"  # SHA256
ripemd = "0.1"  # RIPEMD160
hex = "0.4"
bs58 = "0.5"  # Base58 编码，用于比特币地址

# 加密
aes-gcm = "0.10"
base64 = "0.22.1"
rand = "0.9.2"

# 数据库
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls","chrono"] }

# 工具库
dotenvy = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tungstenite = "0.21"  # WebSocket 客户端
reqwest = { version = "0.11", features = ["json"] }  # HTTP 客户端
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }  # Tokio WebSocket 支持（带 TLS）
futures-util = "0.3"  # 异步工具